# artWalk

./: .closeEnv.bat  .gitignore  .initEnv.bat  README.md  main.js  pyproject.toml
WallpaperCli/: cli.py
app/: README.md  package-lock.json  package.json
app/src/: index.ejs
app/src/main/: index.js
app/src/renderer/: App.vue
app/src/renderer/components/: InfoPage.vue  LandingPage.vue
app/src/renderer/components/LandingPage/: PaintPage.vue  SystemInformation.vue
app/src/renderer/router/: index.js
app/test/e2e/specs/: Launch.spec.js
appWalkPOC/: index.html  index.js
cli/: index.py
pyWalk/: launch.py  pyproject.toml  server.py  setup.py
pyWalk/WallpaperCli/: cli.py
pyWalk/tests/: test_artwalk.py
pyWalk/worker/: RestClient.py  config.py  worker.py
worker/: PaintClient.py  RestClient.py  config.py  worker.py
